--- a/gb/21/4/27/n12908924.md
+++ b/gb/21/4/27/n12908924.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ewwcqx3979/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ewwcqx3979/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ewwcqx3979/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ewwcqx3979/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ewwcqx3979/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>静脉曲张增肺栓塞概率增1.72倍</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12908926-495209-600x400.jpg" />
 <h6>长庚医院皮肤科医师张学伦（右）27日在记者会中呼吁，若腿部暴青筋且已呈现一团一团凸起的严重静脉曲张患者，应尽早就医治疗。（中央社）
 </h6>
 <hr>
-<p>【大纪元2021年04月27日讯】（大纪元记者赖玟茹台湾台北报导）现代人工作型态常常<ahref="https://github.com/ewwcqx3979/djy/blob/master/gb/tag/%E4%B9%85%E5%9D%90.md#1">久坐</a>、<ahref="https://github.com/ewwcqx3979/djy/blob/master/gb/tag/%E4%B9%85%E7%AB%99.md#1">久站</a>，近日长庚医院一项研究发现，静脉曲张患者肺栓塞风险是常人的1.72倍，甚至恐危及生命，抬腿、放血及按摩等方式，改善效果不佳，呼吁尽早就医治疗。</p>
-<p>一名病患李先生是中菜厨师，因为工作<ahref="https://github.com/ewwcqx3979/djy/blob/master/gb/tag/%E4%B9%85%E7%AB%99.md#1">久站</a>导致静脉曲张愈来愈严重，还不时有酸、麻、抽筋、肿胀、疼痛等症状，门诊时特别提醒他可能出现的并发症，病患原本同意接受新式的微创血管内射频治疗，但却因为工作关系希望排在2个月后才治疗，但未料几天后的某天晚上，突然呼吸不顺，胸口喘不过气，紧急就医确诊为血栓及肺栓塞，经治疗后入住加护病房观察，2星期后才顺利出院。</p>
-<p>长庚医院皮肤科医师张学伦表示，根据国外文献，静脉曲张的发生率约为23%，是很常见的疾病，产生原因主要和遗传(有家族史)、年龄较年长者、外伤、女性、工作型态为<ahref="https://github.com/ewwcqx3979/djy/blob/master/gb/tag/%E4%B9%85%E5%9D%90.md#1">久坐</a>或久站、怀孕等有关。</p>
+<p>【大纪元2021年04月27日讯】（大纪元记者赖玟茹台湾台北报导）现代人工作型态常常<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%85%E5%9D%90.md#1">久坐</a>、<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%85%E7%AB%99.md#1">久站</a>，近日长庚医院一项研究发现，静脉曲张患者肺栓塞风险是常人的1.72倍，甚至恐危及生命，抬腿、放血及按摩等方式，改善效果不佳，呼吁尽早就医治疗。</p>
+<p>一名病患李先生是中菜厨师，因为工作<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%85%E7%AB%99.md#1">久站</a>导致静脉曲张愈来愈严重，还不时有酸、麻、抽筋、肿胀、疼痛等症状，门诊时特别提醒他可能出现的并发症，病患原本同意接受新式的微创血管内射频治疗，但却因为工作关系希望排在2个月后才治疗，但未料几天后的某天晚上，突然呼吸不顺，胸口喘不过气，紧急就医确诊为血栓及肺栓塞，经治疗后入住加护病房观察，2星期后才顺利出院。</p>
+<p>长庚医院皮肤科医师张学伦表示，根据国外文献，静脉曲张的发生率约为23%，是很常见的疾病，产生原因主要和遗传(有家族史)、年龄较年长者、外伤、女性、工作型态为<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B9%85%E5%9D%90.md#1">久坐</a>或久站、怀孕等有关。</p>
 <p>张学伦表示，静脉曲张新式微创目前有两种手术方式，雷射及静脉胶。雷射主要藉由导管用雷射直接烧灼病变静脉的血管壁，病患稍有肿涨感，但成功率高达95%以上，惟术后需穿弹性袜；静脉胶则是利用导管将静脉胶打入病变的静脉使其闭合，以达到治疗的效果，成功率98%以上，且术后不必穿弹性袜。</p>
 <p>经过科学化的研究及验证，证实了以新式微创血管内治疗，血栓概率减少51%、肺栓塞概率减少44%、周边动脉疾病也减少36%，有效减少产生血栓及周边动脉疾病等严重并发症的概率。</p>
 <p>张学伦说，目前以口服药及外用药对治疗效果有限，坊间流传的抬腿、放血及按摩等方式，改善效果也不佳，医疗级的渐进性弹性袜虽然会有改善，但仅能控制现况及预防继续恶化，无法根本治疗。</p>
@@ -20,47 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/7/10/n12245380.md#1">踮脚尖防水肿、骨质疏松 教你正确做</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/9/15/n12404225.md#1">北荣桃最新全身诊断型超音波 提供优质医疗</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/9/25/n12430738.md#1">腿粗小腹胖？老中医示范3动作 告别下半身松垮</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/10/4/n12452095.md#1">久坐无益 增高台让你站着办公更健康</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/10/9/n12464329.md#1">【医案】披肝沥胆</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/11/24/n12570957.md#1">疫情影响择期手术 维州大量患者需等一年</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/12/4/n12595021.md#1">在百度登假广告 银川黑医院手术勒索敛财超亿</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/12/17/n12627532.md#1">瘦身有成充满正能量 百折不挠投向光明</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/20/12/28/n12649011.md#1">数年久不处理 加速静脉曲张恶化</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/1/8/n12673875.md#1">静脉曲张不处理 恐有致命肺栓塞</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/7/10/n12245380.md#1">踮脚尖防水肿、骨质疏松 教你正确做</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/9/15/n12404225.md#1">北荣桃最新全身诊断型超音波 提供优质医疗</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/9/25/n12430738.md#1">腿粗小腹胖？老中医示范3动作 告别下半身松垮</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/4/n12452095.md#1">久坐无益 增高台让你站着办公更健康</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/9/n12464329.md#1">【医案】披肝沥胆</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/24/n12570957.md#1">疫情影响择期手术 维州大量患者需等一年</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/4/n12595021.md#1">在百度登假广告 银川黑医院手术勒索敛财超亿</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/17/n12627532.md#1">瘦身有成充满正能量 百折不挠投向光明</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/12/28/n12649011.md#1">数年久不处理 加速静脉曲张恶化</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/1/8/n12673875.md#1">静脉曲张不处理 恐有致命肺栓塞</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/15/n10145540.md#1" target="_blank">关敏：不许鼓吹“蒋经国时代”</a></li><li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12907013.md#1">【探索时分】空中变形金刚：V-22鱼鹰旋翼机</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12906857.md#1">生理期3饮品瘦身 还能补钙、消水肿、解便秘</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12907160.md#1">【远见快评】英媒揭石正丽谎言 特斯拉叫停文急删</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12903045.md#1">美智库报告：习不指定接班人的四种后果</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12902909.md#1">中共围剿特斯拉 马斯克动了谁的奶酪？</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905099.md#1">奥斯卡揭晓 赵婷《游牧人生》获最佳导演等三奖</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12902527.md#1">《父亲》影评：出色的演员与剧本 成就优质电影</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903597.md#1">林逸欣情定7年男友 曝婚讯“一起慢慢变老”</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905001.md#1">尹汝贞摘奥斯卡最佳女配角 谦逊感言获满堂彩</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905575.md#1">“我跟你回家好不好？” 台网友曝榕树托梦</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903574.md#1">竹笋撑破湖南学校宿舍水泥地 快长到天花板</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/26/n12905773.md#1">几百万人抢看的惊奇短片：海鸥骑海鸥</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/24/n12902272.md#1">8种适合种在菜园的花 好看好吃还能驱虫</a></li>
-<li><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/25/n12903393.md#1">美国田径赛杀出“程咬金” 小狗乱入冲第一</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ewwcqx3979/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/27/n12908924.htm">静脉曲张增肺栓塞概率增1.72倍</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/27/n12908924.htm">静脉曲张增肺栓塞概率增1.72倍</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ewwcqx3979/djy/blob/master/gb/21/4/27/n12908924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ewwcqx3979/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ewwcqx3979/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ewwcqx3979/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ewwcqx3979/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/4/27/n12908924.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
